# mualloc

./: .gitignore  CMakeLists.txt  README.md
src/: allocator.c  allocator_private.h  heap_allocator.c  stack_allocator.c  stack_allocator_private.h  static_allocator.c  static_allocator_private.h
